website/sass/main.scss
@import "resources";
@import "fonts";
@import "landing";
@import "layout";
@import "docs";
@import "footer";

body,
html,
#root,
.root-layout {
  font-family: "Poppins", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
}

.fixedHeaderContainer {
  background-color: $mainColor;
}
.fixedHeaderContainer header {
  height: 60px;
  align-items: center;
}
.navPusher {
  padding-top: 76px;
}
.projectTitle {
  font-weight: 500;
}
.projectLogo {
  display: block !important;
  position: static !important;
  justify-content: center !important;
}
@media only screen and (max-width: 1024px) {
  .homeContainer {
    margin-top: 20px;
  }
  .projectLogo {
    display: block !important;
  }
  .homeContainer .homeWrapper #inner {
    max-width: 0;
    padding-right: 40px;
  }
}
a.button {
  border-color: #3160af;
  color: #3160af;
  border-radius: 4px;
}
a.button:hover {
  background-color: #3160af;
  color: white;
}
.slidingNav a {
  font-size: 16px;
  font-weight: 500;
  background-color: #223351;
}
.homeContainer {
  /* background-image: url("../img/background.jpeg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center; */
}

@media only screen and (min-width: 1024px) {
  .docsNavContainer {
    overflow-y: none;
  }
}

